Changes - improvements
